# weather_server

./: .gitignore  Cargo.toml  README.md  style.css
src/: main.rs
src/haak/: auth.rs  database.rs  email.rs  graph.rs  mod.rs  settings.rs
templates/: index.html  settings.html
templates/auth/: invalid_token.html  login.html  registered.html  verified.html
templates/graph/: index.html
templates/resources/scripts/: graph.js
templates/resources/styles/: Dark.css  styles.css
