[package]
name = "server"
version = "0.1.0"
authors = ["Matthijs Padding <mppadding@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-rt = "1.0.0"
actix-files = "0.2.1"
actix-web = { version = "2.0.0-rc", features = ["openssl"] }
actix-session = "0.3.0-alpha.3"
actix-redis = { version = "0.8.0", features = ["web"] }

askama = "0.8"

base64 = "0.11.0"

env_logger = "0.6"

futures = "0.3.1"

lettre = "0.9"
lettre_email = "0.9"

openssl = { version = "0.10", features = ["v110"] }

rand = "0.7.2"

redis-async = "0.6.1"

serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.44"

validator = "0.10"
validator_derive = "0.10"
